overflow problme solved

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -14,6 +14,8 @@
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.705);
+    overflow: hidden;
+    overflow-y: scroll;
 }
 
 /* Home Destination */
